feat: adjust file docker-compose

--- a/serie_python_web/fast_api/Dockerfile
+++ b/serie_python_web/fast_api/Dockerfile
@@ -7,5 +7,8 @@ RUN pip install --only-binary :all: fastapi[all], pybreaker
 COPY . .
 
 CMD cd /app
+FROM redis
+COPY redis.conf /usr/local/etc/redis/redis.conf
 
+CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
