--- a/serie_python_web/sidecar_example/service/Dockerfile
+++ b/serie_python_web/sidecar_example/service/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-RUN pip install --only-binary :all: fastapi[all] requests
+RUN pip install --only-binary :all: fastapi[all]
 
 COPY . /app
 
